# platformer

./: .gitignore  CMakeLists.txt  README.txt  main.cpp  makefile  window.hpp
assets/: background.tsx  decorations.tsx  dooridle.tsx  healthbar.tsx  level.tmx  mainmenu.tmx  pigattack.tsx  pigidle.tsx  pigrun.tsx  platformer.tiled-session  playerattack.tsx  playeridle.tsx  playerrun.tsx  smallhearthit.tsx  smallheartidle.tsx  terrain.tsx
code/: Background.hpp  Camera.hpp  Collision.hpp  CollisionComponent.cpp  CollisionComponent.hpp  Entity.hpp  Event.cpp  Event.hpp  Game.hpp  Input.cpp  Input.hpp  InputComponent.cpp  Level.hpp  Main.cpp  Menu.hpp  Midground.hpp  Physics.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  Pig.hpp  Player.cpp  Player.hpp  PlayerState.cpp  PlayerState.hpp  Scene.hpp  Sprite.hpp  Tiles.hpp  Window.hpp
code/components/: CollisionComponent.cpp  CollisionComponent.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  InputComponent.cpp  InputComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp
code/core/: Assets.hpp  Game.hpp  Input.hpp  Sprite.hpp  Tiles.cpp  Tiles.hpp
code/entities/: Entity.cpp  Entity.hpp  Pig.hpp  Player.cpp  Player.hpp
code/entities/characters/: Character.cpp  Character.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  InputComponent.cpp  InputComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp
code/entities/objects/: Door.hpp
code/entities/ui/: Camera.hpp  HealthBar.cpp  HealthBar.hpp
code/entities_and_components/: CollisionComponent.cpp  CollisionComponent.hpp  Entity.cpp  Entity.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  InputComponent.cpp  InputComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp
code/gui/: Assets.hpp  Camera.hpp  Door.hpp  Game.hpp  HealthBar.cpp  HealthBar.hpp  Input.hpp  Sprite.hpp  Tiles.cpp  Tiles.hpp  Window.hpp
code/scenes/: Level.cpp  Level.hpp  LevelEvent.hpp  Menu.hpp  Scene.hpp
code/util/: PerformanceMonitor.hpp
